--- a/sass/header.sass
+++ b/sass/header.sass
@@ -405,9 +405,7 @@ p
 		font-size: 25px
 		color: #fff
 
-.job
-	display: inline-block
-	margin-right: 10px
+
 // Бутерброд
 .mnu_btn
 		
@@ -494,6 +492,25 @@ label
 		top: 14px
 
 
+.items
+	display: inline-block
+	margin-right: 10px
+	margin-bottom: 30px
+	&:last-of-type
+		margin-right: 0
+.text_center
+	margin-top: 50px
+	text-align: center
+.all_items
+	ul
+
+		margin: 30px 0 0 0
+		padding: 0
+.items_wrap
+	.button
+		margin-right: 10px
+		&:last-of-type
+			margin-right: 0
 // Секция 
 // Секция 
 // Секция 
