--- a/sass/header.sass
+++ b/sass/header.sass
@@ -503,9 +503,10 @@ label
 	text-align: center
 .all_items
 	ul
-
 		margin: 30px 0 0 0
 		padding: 0
+		max-width: 260px
+		margin: auto
 .items_wrap
 	.button
 		margin-right: 10px
