--- a/sass/header.sass
+++ b/sass/header.sass
@@ -503,10 +503,9 @@ label
 	text-align: center
 .all_items
 	ul
-		margin: 30px 0 0 0
 		padding: 0
-		max-width: 260px
-		margin: auto
+		max-width: 520px
+		margin: 30px auto 70px
 .items_wrap
 	.button
 		margin-right: 10px
