--- a/sass/header.sass
+++ b/sass/header.sass
@@ -543,6 +543,8 @@ button.button
 	&:focus
 		background-color: rgba(0,0,0,1)
 		outline: 0
+	&.active
+		background-color: rgba(0,0,0,1)
 .title_h2
 	color: #fff
 	text-align: center
