--- a/sass/header.sass
+++ b/sass/header.sass
@@ -561,7 +561,7 @@ button.button
 	height: 87px
 	margin-bottom: 4px
 	padding-left: 244px
-	transition: 0.5s
+	transition: background 0.5s
 	&:hover
 		text-decoration: none
 		color: inherit
