--- a/sass/header.sass
+++ b/sass/header.sass
@@ -536,15 +536,19 @@ button.button
 	transition: 0.5s
 	&:hover
 		background-color: rgba(0,0,0,1)
+		border-color: rgba(255, 255, 251, 0.8)
 		outline: 0
 	&:active
 		background-color: rgba(0,0,0,1)
+		border-color: rgba(255, 255, 251, 0.8)
 		outline: 0
 	&:focus
 		background-color: rgba(0,0,0,1)
+		border-color: rgba(255, 255, 251, 0.8)
 		outline: 0
 	&.active
 		background-color: rgba(0,0,0,1)
+		border-color: rgba(255, 255, 251, 0.8)
 .title_h2
 	color: #fff
 	text-align: center
