add elem on scroll

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -126,7 +126,11 @@ nav[canvas]
 			input[type=submit]
 				background: #052243
 				color: #fff
-	
+.all_items
+	ul
+		.li
+			display: inline-block
+			width: 100%
 //	Секция 
 //	Секция
 //	Секция
