fix state error & start pagination

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -131,6 +131,11 @@ nav[canvas]
 		.li
 			display: inline-block
 			width: 100%
+.pagination-wrap
+	margin-top: 33px
+	text-align: right
+	a
+		color: #fff
 //	Секция 
 //	Секция
 //	Секция
